Completed bundle refactor

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,3 +1,4 @@
 services:
-    ntlm.provider:
-      class: Loune\NtlmRequestBundle\Service\Ntlm
+    ntlm.request:
+      class: Loune\NtlmRequestBundle\Service\NtlmRequest
+      arguments: [@service_container]
